initial HTML and schema's created

--- a/views/business.hbs
+++ b/views/business.hbs
@@ -24,6 +24,10 @@
     <input type="text" placeholder="Enter job description" />
   </div>
   <div>
+    <label for="location">Address</label>
+    <input type="text" placeholder="Enter the job location" />
+  </div>
+  <div>
     <label for="role">What kind of employee you are looking for ?</label>
     <select name="role">
       <option value="partTime">Part time</option>
